@@ -3,7 +3,7 @@
 # Use information from test driving files to regenerate test scripts
 # that run only one test, and file lists to be use in Makefiles.
 #
-# Copyright 2013 Free Software Foundation, Inc.
+# Copyright 2014 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -139,7 +139,7 @@ basefile=`basename $outfile`
 cat >$outfile <<END_HEADER
 # $basefile generated by $0.
 #
-# Copyright 2013 Free Software Foundation, Inc.
+# Copyright 2014 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
