@@ -1,6 +1,6 @@
 #! /bin/sh
 # $Id$
-# Copyright 2011, 2012, 2013 Free Software Foundation, Inc.
+# Copyright 2011, 2012, 2013, 2014 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -27,7 +27,7 @@ basefile=`basename $outfile`
 cat >$outfile <<END_HEADER
 # $basefile generated by $0.
 #
-# Copyright 2013 Free Software Foundation, Inc.
+# Copyright 2014 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
