@@ -1,6 +1,6 @@
 #! /usr/bin/env perl
 # $Id$
-# Copyright 2011, 2012 Free Software Foundation, Inc.
+# Copyright 2011, 2012, 2013, 2014 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -63,7 +63,7 @@ open (INCLUDE, '>Makefile.tres') or die "open(>Makefile.tres) failed: $!";
 print INCLUDE <<EOH;
 # Makefile.tres generated by $0.
 #
-# Copyright 2013 Free Software Foundation, Inc.
+# Copyright 2014 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
