@@ -1,6 +1,6 @@
 # $Id$
 # Makefile.am for texinfo/tp/tests.
-# Copyright 2012, 2013 Free Software Foundation, Inc.
+# Copyright 2012, 2013, 2014 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -13,9 +13,13 @@
 # autogenerated test scripts list and tests-parser.txt list
 include $(srcdir)/Makefile.onetst
 
-$(srcdir)/Makefile.onetst: ../maintain/regenerate_cmd_tests.sh $(test_driving_files_generated_list)
+$(srcdir)/Makefile.onetst: \
+  ../maintain/regenerate_cmd_tests.sh $(test_driving_files_generated_list)
 	cd $(srcdir) \
-	&& $(SHELL) ../maintain/regenerate_cmd_tests.sh "$@" -base '$(base_tests)' -long '$(long_tests)' -tex_html '$(tex_html_tests)'
+	&& $(SHELL) ../maintain/regenerate_cmd_tests.sh "$@" \
+	  -base '$(base_tests)' \
+	  -long '$(long_tests)' \
+	  -tex_html '$(tex_html_tests)'
 
 base_tests = \
  formatting htmlxref htmlxref-only_mono htmlxref-only_split
